@@ -11,7 +11,7 @@ PROJECT_NAME           = FreeModbus
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 1.3
+PROJECT_NUMBER         = 1.4
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
@@ -402,6 +402,7 @@ EXAMPLE_PATH           = ../demo/AVR \
                          ../demo/LINUX \
                          ../demo/LPC214X \
                          ../demo/Z8ENCORE \
+                         ../demo/AT91SAM7X_ROWLEY \
                          ../demo/MSP430
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the 
