@@ -16,7 +16,7 @@
   * License along with this library; if not, write to the Free Software
   * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   *
-  * File: $Id: main.dox,v 1.14 2007/04/24 23:43:31 wolti Exp $
+  * File: $Id: main.dox,v 1.15 2007/09/12 12:39:24 wolti Exp $
   */
 
 /*! \mainpage FreeModbus
@@ -32,7 +32,8 @@ FreeModbus is a Modbus ASCII/RTU and Modbus TCP implementation for embedded syst
 \par ARM devices:
 - STR71X with FreeRTOS/GCC. See STR71X/simple2.c for an example.
 - STR71TCP with FreeRTOS/lwIP/GCC. This port includes FreeRTOS, lwIP and a fully working PPP stack. The lwIP, PPP and FreeRTOS part is generic and therefore can be used for other ports ( or other projects ).
-- LPC214X with Keil. See LPC214X/demo.c for an example. This port uses the Keil ARM Compiler 2.41.  
+- LPC214X with Keil. See LPC214X/demo.c for an example. This port uses the Keil ARM Compiler 2.41. 
+- AT91SAM7X with FreeRTOS/Rowley. See AT91SAM7X_ROWLEY/demo.c for an example.
 
 \par AVR devices:
 - ATMega8/16/32/128/168/169 with WinAVR. See AVR/demo.c for an example.
@@ -60,6 +61,10 @@ FreeModbus is a Modbus ASCII/RTU and Modbus TCP implementation for embedded syst
 
 /*!
  \example STR71X/simple2.c
+ */
+
+/*!
+ \example AT91SAM7X_ROWLEY/demo.c
  */
 
 /*!
